# Starchan

./: .gitignore  Cargo.md  Cargo.toml  README.md  package-lock.json  package.json  package.md
.github/workflows/: desktop-build.md  desktop-build.yml
Graphchan/: graphchan.html  vite.config.js  vite.config.md
Graphchan/src/: api.jsx  api.md  app.jsx  app.md  data.jsx  graphs.jsx  layout.jsx  main.jsx  main.md  screens.jsx  screens.md  themes.jsx
graphchan_backend/: Cargo.toml
graphchan_backend/src/: api.md  blocking.md  blocking.rs  bootstrap.rs  cli.rs  config.rs  dms.md  dms.rs  events.rs  files.md  files.rs  identity.md  identity.rs  importer.md  importer.rs  lib.rs  main.rs  network.md  network.rs  node.md  node.rs  peers.md  peers.rs  telemetry.rs  threading.md  threading.rs  utils.rs
graphchan_backend/src/api/: blocking.md  blocking.rs  dms.md  dms.rs  events.rs  files.rs  mod.rs  openapi.rs  peers.rs  reactions.rs  search.rs  settings.rs  threads.rs
graphchan_backend/src/crypto/: dm_crypto.md  dm_crypto.rs  keys.md  keys.rs  mod.md  mod.rs  thread_crypto.md  thread_crypto.rs  utils.rs
graphchan_backend/src/database/: mod.md  mod.rs  models.md  models.rs  repositories.md
graphchan_backend/src/database/repositories/: blocked_peers.rs  blocklists.rs  conversations.rs  direct_messages.rs  files.rs  import_post_map.md  import_post_map.rs  ip_blocks.rs  mod.rs  peer_ips.rs  peers.rs  posts.rs  reactions.rs  redacted_posts.rs  search.rs  thread_member_keys.rs  threads.rs  topics.rs
graphchan_backend/src/network/: events.md  events.rs  ingest.md  schelling.md  schelling.rs  topics.md  topics.rs
graphchan_backend/src/network/ingest/: files.rs  mod.md  mod.rs  profile.rs  reactions.rs  resync.rs
graphchan_backend/tests/: rest_api.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.md
src-tauri/src/: main.md  main.rs
