[package]
name = "graphchan_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = { version = "0.30", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
shell-words = "1.1"
infer = "0.15"
iroh-base = { version = "0.97", features = ["key"] }
iroh = { version = "0.97", features = ["address-lookup-pkarr-dht", "address-lookup-mdns"] }
iroh-relay = "0.97"
iroh-blobs = "0.99"
iroh-gossip = "0.97"
distributed-topic-tracker = "0.3"
mainline = "6.0.1"
ed25519-dalek = "3.0.0-pre.1"
rand = { version = "0.9", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
blake3 = "1"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls-native-roots", "hickory-dns"] }
html2text = "0.12"
regex = "1"
sequoia-openpgp = { version = "2.1.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
x25519-dalek = "2.0"
crypto_box = "0.9"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
ipnetwork = "0.20"
lru = "0.12"
parking_lot = "0.12"
n0-watcher = "0.5"
tokio-stream = { version = "0.1", features = ["sync"] }
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tempfile = "3"
